--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,16 @@ API_SUBTYPE=
 API_PREFIX=
 API_VERSION=
 API_DEBUG=
+
+# QCloud SMS
+QCLOUD_SMS_APP_ID=
+QCLOUD_SMS_APP_KEY=
+
+try {
+    $sms->send(18328587066, [
+        'content'  => '【Lbbs社区】您的验证码是1234。如非本人操作，请忽略本短信',
+    ]);
+} catch (\Overtrue\EasySms\Exceptions\NoGatewayAvailableException $exception) {
+    $message = $exception->getException('qcloud')->getMessage();
+    dd($message);
+}
