--- a/.env.example
+++ b/.env.example
@@ -48,15 +48,19 @@ API_PREFIX=
 API_VERSION=
 API_DEBUG=
 
-# QCloud SMS
-QCLOUD_SMS_APP_ID=
-QCLOUD_SMS_APP_KEY=
+# 云片
+YUNPIAN_API_KEY=
 
+# 极光 SMS
+JIGUANG_SMS_APP_KEY=
+JIGUANG_SMS_MASTER_SECRET=
+
+$sms = app('easysms');
 try {
     $sms->send(18328587066, [
-        'content'  => '【Lbbs社区】您的验证码是1234。如非本人操作，请忽略本短信',
+        'content'  => '【孙瑞test】您的验证码是1234。如非本人操作，请忽略本短信',
     ]);
 } catch (\Overtrue\EasySms\Exceptions\NoGatewayAvailableException $exception) {
-    $message = $exception->getException('qcloud')->getMessage();
+    $message = $exception->getException('yunpian')->getMessage();
     dd($message);
-}
+};
