--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,10 @@
         "overtrue/easy-sms": "^1.1",
         "overtrue/laravel-lang": "~3.0",
         "overtrue/pinyin": "~3.0",
+        "socialiteproviders/weixin": "^4.0",
         "spatie/laravel-permission": "~2.29",
         "summerblue/administrator": "~1.1",
+        "tymon/jwt-auth": "1.0.0-rc.4.1",
         "viacreative/sudo-su": "~1.1"
     },
     "require-dev": {
